--- a/Lesson 3 - Getting to know CSS/main.css
+++ b/Lesson 3 - Getting to know CSS/main.css
@@ -48,6 +48,15 @@ p {
 If we want to select all pargraph elements in class attribute of 'hotdog' and set the colour to brown AND also set one of the class attributes 'mustard' to yellow then:
 */
 
+/* TEST Section */
+.exp p {
+    background: blue;
+}
+
+.exp p.futher {
+    background: red;
+}
+
 .hotdog p {
     background: brown;
 }
@@ -55,4 +64,17 @@ If we want to select all pargraph elements in class attribute of 'hotdog' and se
 /* mustard belonging to hotdog class */
 .hotdog p.mustard {
     background: yellow;
+}
+
+/* Buttons testing multiple classes */
+.btn {
+    font-size: 20pt;
+}
+
+.btn-danger {
+    background: red;
+}
+
+.btn-success {
+    background: green;
 }
