updated box model lesson

--- a/Lesson 3 - Getting to know CSS/main.css
+++ b/Lesson 3 - Getting to know CSS/main.css
@@ -68,7 +68,8 @@ If we want to select all pargraph elements in class attribute of 'hotdog' and se
 
 /* Buttons testing multiple classes */
 .btn {
-    font-size: 20pt;
+    font-size: 2em;
+    width: 10em;
 }
 
 .btn-danger {
