--- a/Lesson 4 - Opening the Box Model/main.css
+++ b/Lesson 4 - Opening the Box Model/main.css
@@ -1,7 +1,24 @@
-p .block {
-    display: block;
+span {
+    height: 40px;
 }
 
-p .inline {
-    display: inline;
+.block {
+    display: block;
+    background: blue;
 }
+
+.inline {
+    display: inline;
+    background: green;
+}
+
+.inline-block {
+    display: inline-block;
+    background: red;
+}
+
+.hidden {
+    display: none;
+    background: yellow;
+}
+
