--- a/Lesson 4 - Opening the Box Model/main.css
+++ b/Lesson 4 - Opening the Box Model/main.css
@@ -3,18 +3,26 @@ span {
 }
 
 .block {
+    /* block element default width is 100% (size of page)*/
     display: block;
     background: blue;
+    font-size: 20pt;
 }
 
 .inline {
     display: inline;
+    /* fixed height and width don't work for INLINE elements*/
+    height: 2px;
+    width: 10px;
     background: green;
+    font-size: 20pt;
 }
 
 .inline-block {
     display: inline-block;
+    width: 200px;
     background: red;
+    font-size: 20pt;
 }
 
 .hidden {
@@ -22,3 +30,72 @@ span {
     background: yellow;
 }
 
+/* The Box Model
+- Every element is a rectangular box 
+*/
+div.box-inline-block {
+    /* width and height dont affect the border box model of inline elements AND the VERTICAL margin is also unaffected*/
+    display: inline-block;
+    border: 3px solid #fa32ab;
+    height: 100px;
+    margin: 30px;
+    padding: 10px;
+    width: 100px;
+}
+
+div.box-inline {
+    display: inline;
+    border: 3px solid #435a4f;
+    padding: 10px;
+}
+
+div.empty {
+    display: inline;
+}
+
+div.margins2 {
+    display: inline-block;
+    padding: 20px; 100px;
+    padding-bottom: 0px;
+    margin: 20px; 9px;
+    margin-bottom: 0px;
+    
+    border-top: 3px dotted #0f32ab;
+}
+
+div.margins4 {
+    display: inline-block;
+    /* no spaces when you specify 4 arguments*/
+    padding: 10px 20px 30px 40px;
+    margin: 10px 30px 60px 100px;
+    border-top: 3px solid #ff0000;
+    border-right: 6px dotted #ffff00;
+    border-bottom: 9px dashed #00ff00;
+    border-left: 12px double #0000ff;
+}
+
+div.round1 {
+    display:inline-block;
+    border: 3px solid #000000;
+    border-radius: 5px;
+}
+
+div.round2 {
+    width: 80px;
+    display:inline-block;
+    border: 3px dotted #000000;
+    border-radius: 100%;
+}
+
+div.round3 {
+    width: 80px;
+    display:inline-block;
+    border: 3px dotted #000000;
+    /* top-left/bottom-right, top-right/bottom-left
+    border-radius: 20% 60%;
+}
+
+/* Margin & Padding Declarations
+- You can use MULTIPLE declaration arguments for margin:
+- If you use 2 values: top/bottom, left/right
+- If you use 4 values: top, right, bottom, left (clockwise)*/
