--- a/Lesson 4 - Opening the Box Model/main.css
+++ b/Lesson 4 - Opening the Box Model/main.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 12px;
+}
+
 span {
     height: 40px;
 }
@@ -91,9 +95,20 @@ div.round3 {
     width: 80px;
     display:inline-block;
     border: 3px dotted #000000;
-    /* top-left/bottom-right, top-right/bottom-left
+    /* top-left/bottom-right, top-right/bottom-left*/
     border-radius: 20% 60%;
 }
+
+div.content-box {
+    font-size: 2rem;
+    border: 3px double #000000;
+    box-sizing: border-box;
+    width: 500px;
+    margin: 10px;
+    padding: 5px;
+    
+}
+
 
 /* Margin & Padding Declarations
 - You can use MULTIPLE declaration arguments for margin:
