--- a/Lesson 5 - Positioning Content/styles.css
+++ b/Lesson 5 - Positioning Content/styles.css
@@ -49,26 +49,6 @@ table {
 
 /*
 ===============================
-Clearfix
-===============================
-*/
-clearfix:before,
-clearfix:after {
-    content: "";
-    display: table;
-}
-
-clearfix.after {
-    clear: both;
-}
-
-clearfix {
-    clear: both;
-    *zoom: 1;
-}
-
-/*
-===============================
 Grid
 ===============================
 */
@@ -84,6 +64,7 @@ Grid
 /* Relative properties for HTML */
 html {
     font-size: 12pt;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* Common class 'Container' for all the page elements' */
@@ -94,12 +75,35 @@ html {
     width: 960px;
 }
 
-h1,
-h3,
-h4,
-h5,
-p {
+h1, h3, h4, h5, p {
     margin-bottom: 22px;
+}
+
+h1 {
+    font-weight: 550;
+    font-size: 1.5em;
+    
+    width: 150px;
+    padding: 0.5em 0;
+    border-bottom: 3px solid black;
+}
+
+h2 {
+    font-style: italic;
+}
+
+a {
+    display: inline-block;
+    margin: 1em;
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.description {
+    border: 0.05em solid;
+    padding: 0.8em;
+    margin: 0.8em;
+    width: 800px;
 }
 
 .btn {
@@ -115,6 +119,39 @@ p {
     border: 1px solid #dfe2e5;
     padding: 10px 30px;
 }
+
+.col-1-3,
+.col-2-3 {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.col-1-3 {
+    width: 33.33%;
+}
+
+.col-2-3 {
+    width: 66.66%;
+}
+
+.grid,
+.col-1-3,
+.col-2-3 {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.grid,
+.container {
+    margin: 0 auto;
+    width: 960px;
+}
+
+/*
+.container {
+    padding-left: 30px;
+    padding-right: 30px;
+}*/
 
 .hero {
     padding: 22px 80px 66px 80px;
