tried using position: element in CSS, quite confusing with a few rules here and there

--- a/Lesson 5 - Positioning Content/main.css
+++ b/Lesson 5 - Positioning Content/main.css
@@ -46,6 +46,24 @@ aside {
     font-size: 1.5em;
 }
 
+div {
+    height: 110px;
+    width: 600px;
+    border: 3px solid;
+}
+
+.offset {
+    left: 200px;
+    position: relative;
+    top: 30px;
+}
+
+.absolute {
+    top: 30px;
+    left: 30px;
+    position: absolute;
+}
+
 footer {
     font-size: 1.2em;
     /* clears float effects AFTER they have been applied*
