--- a/Lesson 6 - Working with Typography/styles.css
+++ b/Lesson 6 - Working with Typography/styles.css
@@ -70,47 +70,119 @@ html {
 /* Common class 'Container' for all the page elements' */
 .container {
     margin: 0 auto;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 2em;
+    padding-right: 2em;
     width: 960px;
 }
 
+/*
+===============================
+Headers
+===============================
+*/
+
 h1, h3, h4, h5, p {
-    margin-bottom: 22px;
+    margin-bottom: 0.5em;
+}
+
+h1, h2, h3, h4 {
+    color: #648880;
 }
 
 h1 {
     font-weight: 550;
     font-size: 1.5em;
+    line-height: 1em;
     
-    width: 150px;
+    width: 4em;
     padding: 0.5em 0;
-    border-bottom: 3px solid black;
+    border-bottom: 0.1em solid black;
 }
 
 h2 {
+    font-size: 1.3em;
+    line-height: 1em;
+    margin-bottom: 0.5em;
+}
+
+h3 {
+    font-size: 1.1em;
+    
+}
+
+.tagline {
+    margin: 2em 0 1.3em 0;
+}
+
+h4 {
+    font-size: 1.1em;
+}
+
+h5 {
+    color: #a9b2b9;
+    font-size: 1em;
+    font-weight: 500;
+}
+
+/*
+===============================
+Navigation
+===============================
+*/
+.primary-nav {
+    font-size: 1.1em;
+    font-weight: 400;
+}
+
+strong {
+    font-weight: 400;
+}
+
+cite, em {
     font-style: italic;
 }
 
+body {
+    color: #888;
+    font: 300 1em/1.2em "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+/*
+  ========================================
+  Links
+  ========================================
+*/
+
+a:hover {
+    color: #a9b2b9;
+}
+
 a {
+    color: #648880;
     display: inline-block;
     margin: 1em;
     font-size: 1.2em;
     font-weight: 600;
 }
 
+/*
+  ========================================
+  Elements
+  ========================================
+*/
+
 .description {
-    border: 0.05em solid;
+    display: inline-block;
     padding: 0.8em;
     margin: 0.8em;
-    width: 800px;
+    float: right;
 }
 
 .btn {
+    display: inline-block;
     background: blue;
     color: white;
-    border-radius: 20px;
-    display: inline-block;
+    border-radius: 2em;
     margin: 0;
     padding: 10px;
 }
@@ -137,8 +209,8 @@ a {
 .grid,
 .col-1-3,
 .col-2-3 {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 .grid,
@@ -147,12 +219,40 @@ a {
     width: 960px;
 }
 
-/*
-.container {
-    padding-left: 30px;
-    padding-right: 30px;
-}*/
+.logo {
+    border-top: 4px solid #648880;
+    float: left;
+    font-size: 2em;
+    line-height: 2em;
+    padding: 1.9em 0 1.3em 0;
+}
 
 .hero {
+    line-height: 2em;
     padding: 22px 80px 66px 80px;
+}
+
+.hero h2 {
+    font-size: 1.7em;
+}
+
+.hero p {
+    font-size: 1.3em;
+}
+
+.primary-footer {
+    color: #648880;
+    font-size: 0.9em;
+    padding-bottom: 2em;
+    padding-top: 2em;
+}
+
+.primary-footer small {
+    float: left;
+    font-weight: 400;
+    font-size: 0.2em;
+}
+
+.teaser a:hover h3 {
+    color: #a9b2b9;
 }
