--- a/Lesson 6 - Working with Typography/styles.css
+++ b/Lesson 6 - Working with Typography/styles.css
@@ -112,6 +112,7 @@ h3 {
     
 .tagline {
     margin: 2em 0 1.3em 0;
+    text-align: right;
 }
 
 h4 {
@@ -121,7 +122,8 @@ h4 {
 h5 {
     color: #a9b2b9;
     font-size: 1em;
-    font-weight: 500;
+    font-weight: 400;
+    text-transform: uppercase;
 }
 
 /*
@@ -130,8 +132,11 @@ Navigation
 ===============================
 */
 .primary-nav {
-    font-size: 1.1em;
+    font-size: 0.56em;
     font-weight: 400;
+    
+    letter-spacing: .5px;
+    text-transform: uppercase;
 }
 
 strong {
@@ -158,11 +163,14 @@ a:hover {
 }
 
 a {
+    text-decoration: none;
     color: #648880;
-    display: inline-block;
-    margin: 1em;
     font-size: 1.2em;
     font-weight: 600;
+}
+
+p a {
+    border-bottom: 1px solid #dfe2e5;
 }
 
 /*
@@ -230,6 +238,7 @@ a {
 .hero {
     line-height: 2em;
     padding: 22px 80px 66px 80px;
+    text-align: center;
 }
 
 .hero h2 {
@@ -255,4 +264,14 @@ a {
 
 .teaser a:hover h3 {
     color: #a9b2b9;
+}
+
+/*
+  ========================================
+  Navigation
+  ========================================
+*/
+
+.nav {
+    text-align: right;  
 }
