--- a/Lesson 6 - Working with Typography/styles.css
+++ b/Lesson 6 - Working with Typography/styles.css
@@ -70,7 +70,6 @@ Global
 /* Relative properties for HTML */
 html {
     font-size: 12pt;
-    font-family: 'Open Sans', sans-serif;
 }
 
 strong {
@@ -96,7 +95,7 @@ Headers
 */
 
 h1, h3, h4, h5, p {
-    margin-bottom: 0.5em;
+    margin-bottom: 1.1em;
 }
 
 h1, h2, h3, h4 {
@@ -140,13 +139,31 @@ h5 {
 }
 
 /*
+  ========================================
+  Logo
+  ========================================
+*/
+
+.logo {
+    border-top: 0.1em solid #648880;
+    float: left;
+    font-size: 2.3em;
+    font-weight: 100;
+    
+    letter-spacing: 0.03em;
+    line-height: 2em;
+    padding: 1em 0 1em 0;
+    text-transform: uppercase;
+}
+
+/*
 ===============================
 Navigation
 ===============================
 */
 
 .primary-nav {
-    font-size: 0.56em;
+    font-size: 1.04em;
     font-weight: 400;
     
     letter-spacing: .5px;
@@ -181,8 +198,6 @@ a:hover {
 a {
     text-decoration: none;
     color: #648880;
-    font-size: 1.2em;
-    font-weight: 600;
 }
 
 p a {
@@ -210,16 +225,13 @@ p a {
 
 .btn {
     display: inline-block;
-    background: blue;
-    color: white;
-    border-radius: 2em;
+    border-radius: 0.5em;
     margin: 0;
-    padding: 10px;
 }
 
 .btn-alt {
-    border: 1px solid #dfe2e5;
-    padding: 10px 30px;
+    border: 0.06em solid #dfe2e5;
+    padding: 0.7em 0.9em;
 }
 
 .col-1-3,
@@ -247,18 +259,6 @@ p a {
 .container {
     margin: 0 auto;
     width: 960px;
-}
-
-.logo {
-    border-top: 0.1em solid #648880;
-    float: left;
-    font-size: 2.3em;
-    font-weight: 100;
-    
-    letter-spacing: 0.03em;
-    line-height: 2em;
-    padding: 1em 0 1em 0;
-    text-transform: uppercase;
 }
 
 .hero {
@@ -292,7 +292,7 @@ p a {
 .primary-footer small {
     float: left;
     font-weight: 400;
-    font-size: 0.2em;
+    font-size: 0.9em;
 }
 
 .teaser a:hover h3 {
