--- a/Lesson 7 - Setting Backgrounds & Gradients/main.css
+++ b/Lesson 7 - Setting Backgrounds & Gradients/main.css
@@ -8,9 +8,18 @@ div {
 }
 
 .img {
-    font-
+    font-size: 2em;
     background: white;
     background-image: url("dax-logo.svg");
     padding: 3.2em;
+    margin: 4em;
+}
+
+.one-img {
+    font-size: 2em;
+    background: white;
+    background-image: url("dax-logo.svg");
+    background-repeat: no-repeat;
+    padding: 2em;
     margin: 4em;
 }
