--- a/Lesson 7 - Setting Backgrounds & Gradients/main.css
+++ b/Lesson 7 - Setting Backgrounds & Gradients/main.css
@@ -19,7 +19,27 @@ div {
     font-size: 2em;
     background: white;
     background-image: url("dax-logo.svg");
+    background-position: 50% 50%;
     background-repeat: no-repeat;
     padding: 2em;
     margin: 4em;
+}
+
+.offset {
+    display: inline-block;
+    font-size: 2em;
+    background-image: url("dax-logo.svg");
+    background-repeat: no-repeat;
+    background-position: 10px;
+    padding: 2em;
+}
+
+.center {
+    background: red;
+    display: inline-block;
+    background-image: url("dax-logo.svg");
+    background-repeat: no-repeat;
+    background-position: 50%;
+    font-size: 2em;
+    padding: 3em;
 }
