--- a/Lesson 7 - Setting Backgrounds & Gradients/main.css
+++ b/Lesson 7 - Setting Backgrounds & Gradients/main.css
@@ -23,6 +23,7 @@ div {
     background-repeat: no-repeat;
     padding: 2em;
     margin: 4em;
+    border: 2px solid;
 }
 
 .offset {
@@ -39,7 +40,17 @@ div {
     display: inline-block;
     background-image: url("dax-logo.svg");
     background-repeat: no-repeat;
-    background-position: 50%;
+    background-position: center;
     font-size: 2em;
     padding: 3em;
+}
+
+.notice-success {
+    display: inline-block;
+    background: #67b11c url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/29841/tick_2.png") 20px 50% no-repeat;
+    border: 2px solid #467813;
+    border-radius: 5px;
+    color: #fff;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding: 15px 20px 15px 50px;
 }
