--- a/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
+++ b/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
@@ -1,4 +1,8 @@
-/* Reset */
+/*
+    ========================================
+    Reset
+    ========================================
+*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -43,11 +47,50 @@ table {
   border-spacing: 0;
 }
 
+/*
+    ========================================
+    Grid
+    ========================================
+*/
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+
+/* 
+    ========================================
+    Container Class
+    ========================================
+*/
+.container {
+  margin: 0 auto;
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 960px;
+}
+
 
 html {
-    font-size: 10pt;
+    font-size: 12pt;
+}
+
+h1 {
+    font-size: 2em;
+}
+
+h3 {
+    font-size: 1.3em;
+}
+
+h5 {
+    font-size: 1.5em;
 }
 
 p {
-    font-size: 2em;
+    font-size: 1.2em;
 }
