--- a/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
+++ b/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
@@ -75,22 +75,38 @@ table {
 }
 
 
-html {
-    font-size: 12pt;
+/*
+  ========================================
+  Typography
+  ========================================
+*/
+h1, h3, h4, h5, p {
+  margin-bottom: 22px;
 }
 
-h1 {
-    font-size: 2em;
+/*
+  ========================================
+  Home
+  ========================================
+*/
+
+.hero {
+  padding: 22px 80px 66px 80px;
 }
 
-h3 {
-    font-size: 1.3em;
+
+/*
+  ========================================
+  Buttons
+  ========================================
+*/
+.btn {
+  border-radius: 5px;
+  display: inline-block;
+  margin: 0;
 }
 
-h5 {
-    font-size: 1.5em;
-}
-
-p {
-    font-size: 1.2em;
+.btn-alt {
+  border: 1px solid #dfe2e5;
+  padding: 10px 30px;
 }
