--- a/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
+++ b/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
@@ -62,6 +62,25 @@ table {
 }
 
 
+/*
+  ========================================
+  Clearfix
+  ========================================
+*/
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+.group:after {
+  clear: both;
+}
+.group {
+  clear: both;
+  *zoom: 1;
+}
+
+
 /* 
     ========================================
     Container Class
@@ -82,6 +101,18 @@ table {
 */
 h1, h3, h4, h5, p {
   margin-bottom: 22px;
+}
+
+
+/*
+  ========================================
+  Primary Header
+  ========================================
+*/
+.logo {
+    border-top: 4px solid #648880;
+    padding: 40px 0 22px 0;
+    float: left;
 }
 
 /*
