added some reusable layout styles which I'll apply later

--- a/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
+++ b/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
@@ -81,6 +81,42 @@ table {
 }
 
 
+/*
+  ========================================
+  Reusable Layouts
+  ========================================
+*/
+.col-1-3 {
+  width: 33.33%;
+}
+.col-2-3 {
+  width: 66.66%;
+}
+
+.col-1-3,
+.col-2-3 {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.grid,
+.col-1-3,
+.col-2-3 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.container,
+.grid {
+  margin: 0 auto;
+  width: 960px;
+}
+.container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+
 /* 
     ========================================
     Container Class
@@ -120,7 +156,6 @@ h1, h3, h4, h5, p {
   Home
   ========================================
 */
-
 .hero {
   padding: 22px 80px 66px 80px;
 }
