--- a/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
+++ b/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
@@ -83,7 +83,7 @@ table {
 
 /*
   ========================================
-  Reusable Layouts
+  Reusable Layouts (Grid, Columns)
   ========================================
 */
 .col-1-3 {
@@ -99,21 +99,12 @@ table {
   vertical-align: top;
 }
 
+/* Add spacing to accommodate spacing on end of columns with edge of page */
 .grid,
 .col-1-3,
 .col-2-3 {
   padding-left: 15px;
   padding-right: 15px;
-}
-
-.container,
-.grid {
-  margin: 0 auto;
-  width: 960px;
-}
-.container {
-  padding-left: 30px;
-  padding-right: 30px;
 }
 
 
@@ -122,11 +113,15 @@ table {
     Container Class
     ========================================
 */
+.container,
+.grid {
+  margin: 0 auto; /* center content */
+  width: 960px; /* fixed width */
+}
+
 .container {
-  margin: 0 auto;
   padding-left: 30px;
   padding-right: 30px;
-  width: 960px;
 }
 
 
@@ -139,6 +134,76 @@ h1, h3, h4, h5, p {
   margin-bottom: 22px;
 }
 
+h1, h2, h3, h4 {
+    color: #648880;
+}
+
+h1 {
+    font-size: 36px;
+    line-height: 44px;
+}
+
+h2 {
+    font-size: 24px;
+    line-height: 44px;
+}
+
+h3 {
+    font-size: 21px;
+}
+
+h4 {
+    font-size: 18px;
+}
+
+h5 {
+    color: #a9b2b9;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+strong {
+    font-weight: 400;
+}
+
+cite, em {
+    font-style: italic;
+}
+
+
+/*
+  ========================================
+  Custom Styles (Font)
+  ========================================
+*/
+body {
+    color: #888;
+    font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.tagline {
+    margin: 66px 0 22px 0;
+}
+
+.primary-nav {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+
+/*
+  ========================================
+  Links (anchor elements)
+  ========================================
+*/
+a:hover {
+    color: #a9b2b9;
+}
+
+a {
+    color: #648880;
+}
+
 
 /*
   ========================================
@@ -147,8 +212,10 @@ h1, h3, h4, h5, p {
 */
 .logo {
     border-top: 4px solid #648880;
-    padding: 40px 0 22px 0;
     float: left;
+    font-size: 48px;
+    line-height: 44px;
+    padding: 40px 0 22px 0;
 }
 
 /*
@@ -157,7 +224,16 @@ h1, h3, h4, h5, p {
   ========================================
 */
 .hero {
+    line-height: 44px;
   padding: 22px 80px 66px 80px;
+}
+
+.hero h2 {
+    font-size: 36px;
+}
+
+.hero p {
+    font-size: 24px;
 }
 
 
@@ -177,9 +253,19 @@ h1, h3, h4, h5, p {
   padding: 10px 30px;
 }
 
+
 /*
   ========================================
-  Primary footer
+  Teaser Section
+  ========================================
+*/
+.teaser a:hover h3 {
+    color: #a9b2b9;
+}
+
+/*
+  ========================================
+  Primary Footer
   ========================================
 */
 .primary-footer .small {
@@ -187,6 +273,13 @@ h1, h3, h4, h5, p {
 }
 
 .primary-footer {
+    color: #648880;
+    font-size: 14px;
     padding-bottom: 44px;
     padding-top: 44px;
+}
+
+.primary-footer small {
+    float: left;
+    font-weight: 400;
 }
