--- a/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
+++ b/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
@@ -47,6 +47,18 @@ table {
   border-spacing: 0;
 }
 
+
+/*
+  ========================================
+  Custom Styles (Font)
+  ========================================
+*/
+body {
+    color: #888;
+    font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
 /*
     ========================================
     Grid
@@ -59,6 +71,48 @@ table {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+/* 
+    ========================================
+    Container Class
+    ========================================
+*/
+.container,
+.grid {
+  margin: 0 auto; /* center content */
+  width: 960px; /* fixed width */
+}
+
+.container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+/*
+  ========================================
+  Reusable Layouts (Grid, Columns)
+  ========================================
+*/
+/* Add spacing to accommodate spacing on end of columns with edge of page */
+.grid,
+.col-1-3,
+.col-2-3 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.col-1-3,
+.col-2-3 {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.col-1-3 {
+  width: 33.33%;
+}
+.col-2-3 {
+  width: 66.66%;
 }
 
 
@@ -78,50 +132,6 @@ table {
 .group {
   clear: both;
   *zoom: 1;
-}
-
-
-/*
-  ========================================
-  Reusable Layouts (Grid, Columns)
-  ========================================
-*/
-.col-1-3 {
-  width: 33.33%;
-}
-.col-2-3 {
-  width: 66.66%;
-}
-
-.col-1-3,
-.col-2-3 {
-  display: inline-block;
-  vertical-align: top;
-}
-
-/* Add spacing to accommodate spacing on end of columns with edge of page */
-.grid,
-.col-1-3,
-.col-2-3 {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-
-/* 
-    ========================================
-    Container Class
-    ========================================
-*/
-.container,
-.grid {
-  margin: 0 auto; /* center content */
-  width: 960px; /* fixed width */
-}
-
-.container {
-  padding-left: 30px;
-  padding-right: 30px;
 }
 
 
@@ -160,6 +170,7 @@ h5 {
     color: #a9b2b9;
     font-size: 14px;
     font-weight: 400;
+    text-transform: uppercase;
 }
 
 strong {
@@ -173,35 +184,20 @@ cite, em {
 
 /*
   ========================================
-  Custom Styles (Font)
-  ========================================
-*/
-body {
-    color: #888;
-    font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.tagline {
-    margin: 66px 0 22px 0;
-}
-
-.primary-nav {
-    font-size: 14px;
-    font-weight: 400;
-}
-
-
-/*
-  ========================================
   Links (anchor elements)
   ========================================
 */
+a {
+    color: #648880;
+    text-decoration: none;
+}
+
 a:hover {
     color: #a9b2b9;
 }
 
-a {
-    color: #648880;
+p a {
+    border-bottom: 1px solid #dfe2e5;
 }
 
 
@@ -214,8 +210,33 @@ a {
     border-top: 4px solid #648880;
     float: left;
     font-size: 48px;
+    font-weight: 100;
+    letter-spacing: .5px;
     line-height: 44px;
     padding: 40px 0 22px 0;
+    text-transform: uppercase;
+}
+
+.tagline {
+    margin: 66px 0 22px 0;
+    text-align: right;
+}
+
+.primary-nav {
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: .5px;
+    text-transform: uppercase;
+}
+
+
+/*
+  ========================================
+  Navigation
+  ========================================
+*/
+.nav {
+    text-align: right;
 }
 
 /*
@@ -225,7 +246,8 @@ a {
 */
 .hero {
     line-height: 44px;
-  padding: 22px 80px 66px 80px;
+    padding: 22px 80px 66px 80px;
+    text-align: center;
 }
 
 .hero h2 {
@@ -234,6 +256,7 @@ a {
 
 .hero p {
     font-size: 24px;
+    font-weight: 100;
 }
 
 
