added background colour

--- a/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
+++ b/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
@@ -54,6 +54,7 @@ table {
   ========================================
 */
 body {
+    background: #293f50;
     color: #888;
     font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -137,6 +138,18 @@ body {
 
 /*
   ========================================
+  Rows
+  ========================================
+*/
+.row {
+    background: #fff;
+    min-width: 960px;
+    padding: 66px 0 44px 0;
+}
+
+
+/*
+  ========================================
   Typography
   ========================================
 */
@@ -206,6 +219,16 @@ p a {
   Primary Header
   ========================================
 */
+.primary-header a,
+.primary-footer a {
+    color: #fff;    
+}
+
+.primary-head a:hover,
+.primary-footer a:hover {
+    color: #648880;
+}
+
 .logo {
     border-top: 4px solid #648880;
     float: left;
@@ -245,6 +268,7 @@ p a {
   ========================================
 */
 .hero {
+    color: #fff;
     line-height: 44px;
     padding: 22px 80px 66px 80px;
     text-align: center;
@@ -266,14 +290,24 @@ p a {
   ========================================
 */
 .btn {
-  border-radius: 5px;
-  display: inline-block;
-  margin: 0;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 400;
+    letter-spacing: .5px;
+    margin: 0;
+    text-transform: uppercase;
 }
 
 .btn-alt {
-  border: 1px solid #dfe2e5;
-  padding: 10px 30px;
+    border: 1px solid #fff;
+    padding: 10px 30px;
+}
+
+.btn-alt:hover {
+    background: #fff;
+    color: #648880;
 }
 
 
