--- a/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
+++ b/Lesson 7 - Setting Backgrounds & Gradients/Styles Conference/assets/stylesheets/main.css
@@ -141,10 +141,23 @@ body {
   Rows
   ========================================
 */
+.row,
+.row-alt {
+    min-width: 960px;
+}
+
 .row {
     background: #fff;
     min-width: 960px;
     padding: 66px 0 44px 0;
+}
+
+.row-alt {
+    background: #cbe2c1; /*backup colour*/
+    background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+    background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+    background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+    padding: 44px 0 22px 0;
 }
 
 
@@ -192,6 +205,21 @@ strong {
 
 cite, em {
     font-style: italic;
+}
+
+
+/*
+  ========================================
+  Leads
+  ========================================
+*/
+.lead {
+    text-align: center;
+}
+
+.lead p {
+    font-size: 21px;
+    line-height: 33px;
 }
 
 
