fixed nav consistency across site, added styles conference code for lesson 10

--- a/Lesson 10 - Building Forms/Styles Conference/assets/stylesheets/main.css
+++ b/Lesson 10 - Building Forms/Styles Conference/assets/stylesheets/main.css
@@ -49,9 +49,9 @@ table {
 
 
 /*
-  ========================================
-  Custom Styles (Font)
-  ========================================
+    ========================================
+    Custom Styles (Font)
+    ========================================
 */
 body {
     background: #293f50;
@@ -91,9 +91,9 @@ body {
 }
 
 /*
-  ========================================
-  Reusable Layouts (Grid, Columns)
-  ========================================
+    ========================================
+    Reusable Layouts (Grid, Columns)
+    ========================================
 */
 /* Add spacing to accommodate spacing on end of columns with edge of page */
 .grid,
@@ -118,9 +118,9 @@ body {
 
 
 /*
-  ========================================
-  Clearfix
-  ========================================
+    ========================================
+    Clearfix
+    ========================================
 */
 .group:before,
 .group:after {
@@ -137,9 +137,9 @@ body {
 
 
 /*
-  ========================================
-  Rows
-  ========================================
+    ========================================
+    Rows
+    ========================================
 */
 .row,
 .row-alt {
@@ -162,9 +162,9 @@ body {
 
 
 /*
-  ========================================
-  Typography
-  ========================================
+    ========================================
+    Typography
+    ========================================
 */
 h1, h3, h4, h5, p {
   margin-bottom: 22px;
@@ -212,9 +212,9 @@ p {
 }
 
 /*
-  ========================================
-  Leads
-  ========================================
+    ========================================
+    Leads
+    ========================================
 */
 .lead {
     text-align: center;
@@ -227,9 +227,9 @@ p {
 
 
 /*
-  ========================================
-  Links (anchor elements)
-  ========================================
+    ========================================
+    Links (anchor elements)
+    ========================================
 */
 a {
     color: #648880;
@@ -246,9 +246,9 @@ p a {
 
 
 /*
-  ========================================
-  Primary Header
-  ========================================
+    ========================================
+    Primary Header
+    ========================================
 */
 .primary-header a,
 .primary-footer a {
@@ -285,9 +285,9 @@ p a {
 
 
 /*
-  ========================================
-  Navigation
-  ========================================
+    ========================================
+    Navigation
+    ========================================
 */
 .nav {
     text-align: right;
@@ -304,9 +304,9 @@ p a {
 }
 
 /*
-  ========================================
-  Home
-  ========================================
+    ========================================
+    Home
+    ========================================
 */
 .hero {
     color: #fff;
@@ -326,9 +326,9 @@ p a {
 
 
 /*
-  ========================================
-  Buttons
-  ========================================
+    ========================================
+    Buttons
+    ========================================
 */
 .btn {
     border-radius: 5px;
@@ -351,11 +351,22 @@ p a {
     color: #648880;
 }
 
+.btn-default {
+    border: 0;
+    background: #648880;
+    padding: 11px 30px;
+    font-size: 14px;
+}
+
+.btn-default:hover {
+    background: #77a198;
+}
+
 
 /*
-  ========================================
-  Teaser Section
-  ========================================
+    ========================================
+    Teaser Section
+    ========================================
 */
 .teaser a:hover h3 {
     color: #a9b2b9;
@@ -369,9 +380,9 @@ p a {
 }
 
 /*
-  ========================================
-  Primary Footer
-  ========================================
+    ========================================
+    Primary Footer
+    ========================================
 */
 .primary-footer .small {
     float: left;
@@ -391,9 +402,9 @@ p a {
 
 
 /*
-  ========================================
-  Speakers
-  ========================================
+    ========================================
+    Speakers
+    ========================================
 */
 .speaker-info {
     border: 1px solid #dfe2e5;
@@ -416,9 +427,9 @@ p a {
 
 
 /*
-  ========================================
-  Venue
-  ========================================
+    ========================================
+    Venue
+    ========================================
 */
 .venue-theatre {
     margin-bottom: 66px;
@@ -430,4 +441,56 @@ p a {
 
 .venue-map {
     height: 264px;
+}
+
+
+/*
+    ========================================
+    Register
+    ========================================
+*/
+.why-attend {
+    list-style-type: square;
+    margin: 0 0 22px 30px;
+}
+
+form {
+    margin-bottom: 22px;
+}
+
+input,
+select,
+textarea {
+    font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.register-group label {
+    color: #648880;
+    cursor: pointer;
+    font-weight: 400;
+}
+
+.register-group input,
+.register-group select,
+.register-group textarea {
+    border: 1px solid #c6c9cc;
+    border-radius: 5px;
+    color: #888;
+    display: block;
+    margin: 5px 0 27px 0;
+    padding: 5px 8px;
+}
+
+.register-group input,
+.register-group textarea {
+    width: 100%;
+}
+
+.register-group select {
+    height: 34px;
+    width: 60px;
+}
+
+.register-group textarea {
+    height: 78px;
 }
