added complete example table

--- a/Lesson 11 - Organising Data with Tables/main.css
+++ b/Lesson 11 - Organising Data with Tables/main.css
@@ -3,29 +3,83 @@ caption {
 }
 
 table {
-    border-collapse: collapse;
+    border-collapse: separate;
+    border-spacing: 0;
+    color: #4a4a4d;
+    font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 th,
 td {
-    border-bottom: 1px solid #000;
+    vertical-align: middle;
     padding: 10px 15px;
 }
 
-tfoot tr:last-child td {
-    border-bottom: 0;
+td {
+    border-bottom: 1px solid black; 
+    border-right: 1px solid black;
 }
 
-.elements tbody tr:nth-child(even) {
+td:first-child  {
+    border-left: 1px solid black;
+}
+
+thead {
+    background: #395870;
+    background: linear-gradient(#49708f, #293f50);
+    color: white;
+    font-size: 11px;
+    text-transform: uppercase;
+}
+
+th:first-child {
+    text-align: left;
+    border-top-left-radius: 5px;
+}
+
+th:last-child {
+    border-top-right-radius: 5px;
+}
+
+tbody tr:nth-child(even) {
     background: #f0f0f2;
 }
 
-.elements th,
-.elements td {
-    border: 1px solid black;
+.book-title {
+    color: #395870;
+    display: block;
 }
 
-.elements thead {
-    color: white;
-    background: #395870;
+.text-offset {
+    color: #7c7c80;
+    font-size: 12px;
+}
+
+.item-stock,
+.item-qty {
+    text-align: center;
+}
+
+.item-price,
+tfoot
+{
+    text-align: right;
+}
+
+.item-multiple {
+    display: block;
+}
+
+tfoot tr:last-child {
+    background: #f0f0f2;
+    color: #395870;
+    font-weight: bold;
+}
+
+tfoot tr:last-child td:first-child {
+    border-bottom-left-radius: 5px;
+}
+
+tfoot tr:last-child td:last-child {
+    border-bottom-right-radius: 5px;
 }
